# nscope-rs

./: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml
.github/workflows/: build_python.yml  rust.yml  tests.yml
.run/: Analog Outputs.run.xml  Cargo Clippy.run.xml  Cargo Test.run.xml  List All nScopes.run.xml  Monitor Power.run.xml  Update Firmware.run.xml
examples/: analog_outputs.py  analog_outputs.rs  data_request.py  data_request.rs  fast_communication.rs  list_all_nlabs.py  list_all_nlabs.rs  list_all_nscopes.py  list_all_nscopes.rs  monitor_power.py  monitor_power.rs  pulse_outputs.py  pulse_outputs.rs  update_firmware.rs
src/: firmware.rs  lab_bench.rs  lib.rs  main.rs  nscope.rs  python.rs  scope.rs  scope_dfu.rs  ver.rs  version.rs
src/firmware/: v2  v2.0
src/nscope/: commands.rs  data.rs  power.rs  responses.rs
src/python/: analog_output.rs  bench.rs  cli.rs  pulse_output.rs  scope.rs
src/scope/: analog_input.rs  analog_output.rs  commands.rs  data_requests.rs  power.rs  pulse_output.rs  trigger.rs
src/scope/analog_input/: voltages.rs  voltages_legacy.rs
src/scope/run_loops/: v1.rs  v2.rs
