[package]
name = "nscope"
version = "1.0.0"
authors = ["David Meyer <david@nscope.org>"]
license = "GPL-3.0"
description = """
Communication with nScope devices
"""
homepage = "https://www.nscope.org"
repository = "https://github.com/nLabs-nScope/nscope-rs"
documentation = "https://github.com/nLabs-nScope/nscope-rs"
readme = "README.md"
edition = "2018"

[lib]
name = "nscope"
crate-type = ["rlib", "cdylib"]

[dependencies]
git-version = "0.3.4"
hidapi = "2.3.3"
log = "~0.4"
regex = "~1"
rusb = "0.9.3"
dfu-libusb = "0.5.1"
pyo3 = { version="0.21.2", features = ["multiple-pymethods"] }

[dev-dependencies]
env_logger = "0.10.0"
semver = "1.0.17"
