[package]
name = "nscope"
version = "1.0.0"
authors = ["David Meyer <david@nscope.org>"]
license = "GPL-3.0"
description = """
Communication with nScope devices
"""
homepage = "https://www.nscope.org"
repository = "https://github.com/nLabs-nScope/nscope-rs"
documentation = "https://github.com/nLabs-nScope/nscope-rs"
readme = "README.md"
edition = "2018"

[dependencies]
git-version = "0.3.4"
hidapi = "2.3.3"
log = "~0.4"
regex = "~1"
rusb = { version = "0.9.3", features = ["vendored"] }
dfu-libusb = "0.5.1"

[dev-dependencies]
env_logger = "0.10.0"
semver = "1.0.17"
