[package]
name = "nlabapi"
version = "1.0.3"
authors = ["David Meyer <david@getnlab.com>"]
license = "GPL-3.0"
description = """
Communication with nLab devices
"""
homepage = "https://www.getnlab.com"
repository = "https://github.com/nLabs-nScope/nlabapi"
documentation = "https://github.com/nLabs-nScope/nlabapi"
readme = "README.md"
edition = "2018"

[lib]
name = "nlabapi"
crate-type = ["rlib", "cdylib"]

[dependencies]
git-version = "0.3.4"
hidapi = "2.3.3"
log = "~0.4"
regex = "~1"
rusb = { version = "0.9.3", features = ["vendored"] }
dfu-libusb = "0.5.1"
clap = { version = "4.5.16", features = ["derive"] }
pyo3 = { version = "~0.22", features = ["multiple-pymethods"] }

[dev-dependencies]
env_logger = "0.10.0"
semver = "1.0.17"
