[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "nlabapi"
requires-python = ">=3.8"
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]

[project.scripts]
nlab = "nlabapi:run_cli"

[tool.maturin]
module-name = "nlabapi"
features = ["pyo3/extension-module"]
