[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "nlabapi"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dynamic = ["version"]

[project.scripts]
nlab = "nlabapi:run_cli"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.maturin]
module-name = "nlabapi"
features = ["pyo3/extension-module"]
